# benford-web

./: index.html  main.py  package.json  pyproject.toml
src/: App.svelte
